second stage of implementation of anime support